<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>ur5e_ikfast_moveit_plugin</name>
  <version>0.0.0</version>
  <description>The ur5e_ikfast_moveit_plugin package</description>
  <maintainer email="traversr@andrew.cmu.edu">Travers Rhodes</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>liblapack-dev</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <moveit_core plugin="${prefix}/ur5e_ikfast_moveit_plugin_description.xml"/>
  </export>
</package>
